2002-01-22  Anders Carlsson  <andersca@gnu.org>

	* button-widget.c: Lower the button displacement.

2002-01-22  Padraig O'Briain  <padraig.obriain@sun.com>

	* basep_widget.c: Add new function basep_widget_move_focus to
	implement GtkWidgetClass's move_focus; it causes a icon in the panel
	to receive focus initially instead of hide/show button when Tab is
	pressed when the panel has focus

Mon Jan 21 19:20:06 2002  George Lebl <jirka@5z.com>

	* logout.c: block the logout signal while we're in the signal handler

	* main.c: remove the I'm on crack dialog.  it's pissing the shit out
	  of me.  So we're no longer elitist.  Plus the panel shouldn't screw
	  up your old config now so it should be ok.

	* xstuff.[ch]: remove the nautilus check thing, it's broken and
	  not used anyway

2002-01-21  Glynn Foster  <glynn.foster@sun.com>

	* panel-global-config.schemas, panel-per-panel-config.schemas: Add 
	xml tags to these files.

Mon Jan 21 00:50:06 2002  George Lebl <jirka@5z.com>

	* panel.c: use g_filename_from_uri

2002-01-20  Seth Nickell  <snickell@stanford.edu>

	* main.c: (tell_user_Im_on_crack):

	Mr. Picky Strikes! Remove the separator from
	the dialog as per the HIG.

2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* menu.c: (create_add_panel_submenu):
	* panel-config.c: (update_config_type), (panel_config):

	Rename "Aligned panel" to "Corner panel".

	Add pixmaps for the menu items under "Create panel->".
	
2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* menu.c: (create_applets_menu), (make_add_submenu),
	(create_root_menu):

	Start collapsing Applet submenu into the "add" submenu. The distinction
	between applets and other "things you can put on the panel" isn't very
	clear and is primarily a technical distinction (particular for objects
	such as the status dock. This looks bigger, but its the amount of data
	many users effectively have to sift through to find what they're looking